undo unneeded changes for static